--- a/src/main/resources/templates/profile/accountInfo.html
+++ b/src/main/resources/templates/profile/accountInfo.html
@@ -25,7 +25,7 @@
         <div id="profileNavContainer">
             <a href="/account/info">
                 <div class="profileNav active" id="accountInfoButton">
-                    <span>Account info</span>
+                    <span th:text="#{account.info}"></span>
                 </div>
             </a>
             <a href="/account/collections" id="collectionsButton">
