--- a/src/main/resources/templates/profile/treeCollections.html
+++ b/src/main/resources/templates/profile/treeCollections.html
@@ -51,6 +51,10 @@
                 <!-- <div class="designImage"></div> -->
                 <div class="designInfo">
                     <section class="infoHeader">
+                        <script>
+                            let localeTreeCollectionsGenerateCollectionsName = "[[#{collection.name}]]";
+                            let localeTreeCollectionsGenerateCollectionsBoxes = "[[#{collection.boxes}]]";
+                        </script>
                         <span class="orderName" th:text="#{collection.name}">Untitled</span>
                         <span class="spanBoxText" th:text="#{collection.boxes}"></span>
                     </section>
