--- a/src/main/resources/templates/home/verificationFail.html
+++ b/src/main/resources/templates/home/verificationFail.html
@@ -24,7 +24,7 @@
     <div id="content">
         <div id="productContainer">
             <div id="product">
-                <h2>Verification has failed - perhaps you have already verified</h2>
+                <h2><span th:text="#{home.verification.failed}"></span></h2>
             </div>
         </div>
     </div>
