--- a/src/main/resources/templates/home/verificationSuccess.html
+++ b/src/main/resources/templates/home/verificationSuccess.html
@@ -24,7 +24,7 @@
     <div id="content">
         <div id="productContainer">
             <div id="product">
-                <h2>Thank you for verifying</h2>
+                <h2><span th:text="#{home.thanks.for.verifying}"></span></h2>
             </div>
         </div>
     </div>
