--- a/src/main/resources/templates/profile/resetPassword.html
+++ b/src/main/resources/templates/profile/resetPassword.html
@@ -25,7 +25,7 @@
     <div id="content">
         <div id="productContainer">
             <div id="product" style="display: flex; flex-direction: column">
-                <h2>Reset Password</h2>
+                <h2><span th:text="#{forgot.password.title}"></span></h2>
                 <input type="hidden" id="resetId" th:value="${resetId}">
                 <input type="hidden" id="resetToken" th:value="${resetToken}">
                 <label for="newPasswordInput" style="font-size: var(--fontRegular)" th:text="#{account.password.reset.new.password}"></label>
