--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -100,11 +100,11 @@
                 </div>
 
                 <p>Email</p>
-                <input type="text" th:name="email" id="loginEmail" placeholder="Type your email . . ."
+                <input type="text" th:name="email" id="loginEmail" th:placeholder="#{home.type.email}"
                        maxlength="254" required>
                 <hr>
                 <p><span th:text="#{login.password}"></span></p>
-                <input type="password" th:name="password" id="loginPassword" placeholder="Type your password . . ."
+                <input type="password" th:name="password" id="loginPassword" th:placeholder="#{home.type.password}"
                        maxlength="60" required>
                 <hr>
                 <a type="button" href="/forgotPassword" name="forgotPassword" id="forgotPassword"><span
@@ -133,11 +133,11 @@
                     <h1 class="modal-title"><span th:text="#{login.sign.up}"></span></h1>
                 </div>
                 <p>Email</p>
-                <input type="text" th:name="email" id="signUpEmail" placeholder="Type your email . . ."
+                <input type="text" th:name="email" id="signUpEmail" th:placeholder="#{home.type.email}"
                        maxlength="254" required>
                 <hr>
                 <p><span th:text="#{login.password}"></span></p>
-                <input type="password" th:name="password" id="signUpPassword" placeholder="Type your password . . ."
+                <input type="password" th:name="password" id="signUpPassword" th:placeholder="#{home.type.password}"
                        maxlength="60" required>
                 <hr>
                 <p><span th:text="#{login.confirm.password}"></span></p>
@@ -215,9 +215,9 @@
                 </a>
             </div>
             <div id="verificationBanner">
-                <span>Please</span>
-                <input type="button" id="verificationButton" onclick="redirectVerificationPage();" value="verify">
-                <span>your email to continue using our website</span>
+                <span th:text="#{home.verify.email.text1}"></span>
+                <input type="button" id="verificationButton" onclick="redirectVerificationPage();" th:value="#{home.verify.email.text2}">
+                <span th:text="#{home.verify.email.text3}"></span>
 
             </div>
         </div>
