--- a/src/main/resources/static/styles/forgotPassword.css
+++ b/src/main/resources/static/styles/forgotPassword.css
@@ -17,4 +17,11 @@
     border-radius: 5px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
     font-size: var(--fontRegular);
+    transition: 0.3s;
+}
+
+.forgotSubmit:hover
+{
+    transform: scale(0.9);
+    box-shadow: none;
 }
