--- a/src/main/resources/static/styles/orders.css
+++ b/src/main/resources/static/styles/orders.css
@@ -111,6 +111,8 @@
     border-radius: 12px;
     border: none;
     color: white;
+    transition: 0.3s;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
 }
 
 .orderCompletePaymentBtn
@@ -118,7 +120,7 @@
     display: none;
 }
 
-.viewDesignBtn:hover
+.viewDesignBtn:hover, .orderCompletePaymentBtn:hover
 {
     transform: scale(0.9);
     box-shadow: none;
