--- a/src/main/resources/static/styles/productExample.css
+++ b/src/main/resources/static/styles/productExample.css
@@ -11,7 +11,6 @@ html, body
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     background-color: white;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -101,6 +100,7 @@ html, body
     /*background: rgba(0,0,0,0);*/
     /*border-radius: 5px;*/
     border-radius: 10px;
+    transition: 0.3s;
 }
 
 .createNowBtn:hover
