--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -48,6 +48,7 @@ a:hover
     background: white;
     text-align: center;
     font-size: var(--fontRegular);
+    transition: 0.3s;
 }
 
 .profileNav:hover
@@ -136,6 +137,7 @@ a:hover
     color: white;
     font-size: var(--fontRegular);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    transition: 0.3s;
 }
 
 #accountInfoSubmitBtn:hover
