--- a/src/main/resources/static/styles/treeCollection.css
+++ b/src/main/resources/static/styles/treeCollection.css
@@ -81,6 +81,7 @@
     color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
     margin-bottom: 0.8vw;
+    transition: 0.3s;
 }
 
 .collectionInfoBtn:hover
@@ -97,6 +98,7 @@
     font-size: var(--fontRegular);
     width:59%;
     margin: 1vh 0 1vh 0;
+    transition: 0.3s;
 }
 
 @media all and (min-width: 200px) and (max-width: 1024px)
