--- a/src/main/resources/templates/home/verificationGuide.html
+++ b/src/main/resources/templates/home/verificationGuide.html
@@ -33,7 +33,7 @@
                     <span th:text="#{home.how.to.verify.email.text3}"></span>
                 </p>
                 <input type="button" id="verificationButton"
-                       style="var(--fontRegular); padding: 1vh 1vw; width: fit-content"
+                       class="resendButton"
                        onclick="sendVerificationEmail()" th:value="#{home.resend.email}">
             </div>
         </div>
