--- a/src/main/resources/templates/home/cookieTermsAndConditionsDanish.html
+++ b/src/main/resources/templates/home/cookieTermsAndConditionsDanish.html
@@ -122,7 +122,7 @@
         Post nr: 2200 <br>
         By: København <br>
         Telefon: 26 19 23 27 <br>
-        Email: info@treecreate.dk
+        E-mail: info@treecreate.dk
     </p>
     <p>
         Sidst opdateret: 30.10.2020
