--- a/src/main/resources/templates/profile/forgotPassword.html
+++ b/src/main/resources/templates/profile/forgotPassword.html
@@ -27,7 +27,7 @@
             <div id="product" style="display: flex; flex-direction: column">
                 <label for="forgotInputEmail" style="font-size: var(--fontRegular)"><span th:text="#{home.subscribe.input}"></span></label>
                 <input type="email" id="forgotInputEmail" class="forgotInput" maxlength="255"
-                       placeholder="Your email...">
+                       placeholder="Your e-mail...">
                 <input type="submit" value="Send password reset link" id="forgotSubmitBtn" class="forgotSubmit"
                        onclick="sendPasswordResetRequest()">
             </div>
@@ -37,8 +37,8 @@
                     const email = document.getElementById("forgotInputEmail").value;
                     if (email === "")
                     {
-                        console.log("The email input field cannot be empty");
-                        showBasketPopup("The email cannot be empty", true);
+                        console.log("The e-mail input field cannot be empty");
+                        showBasketPopup("The e-mail cannot be empty", true);
                         return;
                     }
                     fetch(location.origin + "/forgotPassword/" + email).then(
