--- a/src/main/resources/templates/profile/invalidResetLink.html
+++ b/src/main/resources/templates/profile/invalidResetLink.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Forgot Password</title>
+    <title>Invalid reset page</title>
     <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/products.css}" rel="stylesheet">
