--- a/src/main/resources/templates/payment/basket.html
+++ b/src/main/resources/templates/payment/basket.html
@@ -36,7 +36,7 @@
                     <input type="number" name="inputPhoneNumber" id="inputPhoneNumber" th:value="${user.phoneNumber}"
                            maxlength="15" required>
 
-                    <label for="inputEmail">Email</label>
+                    <label for="inputEmail">E-mail</label>
                     <input type="email" name="inputEmail" id="inputEmail" th:value="${user.email}" maxlength="254"
                            required>
 
@@ -108,7 +108,15 @@
                             </tr>
                             <script>loadOrders()</script>
                         </table>
-                        <section id="discountCode">
+                        <div id="expectedDate" >
+                            <p><span th:text="#{basket.expected.delivery}" ></span> ( <span id="datetime"></span> )</p>
+
+                            <script>
+                                var dt = new Date(Date.now() + 10096e5);
+                                document.getElementById("datetime").innerHTML = dt.toLocaleDateString();
+                            </script>
+                        </div>
+                        <section id="discountCode" style="margin-top:15px;">
                             <label for="inputDiscountCode">Discount Code:</label>
                             <input id="inputDiscountCode" placeholder="ex. ABC123" maxlength="25"><br>
                             <input type="button" id="applyDiscountBtn" class="applyDiscountBtn" onclick="applyDiscount()" value="Apply discount">
