--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -249,17 +249,17 @@
 </section>
 <section id="footerContainer">
     <nav id="footer">
-        <div class="footer-row">
+        <div class="footer-row topFooter">
             <div class="section">
-                <span class="title" th:text="#{footer.contact.title}"></span><br>
+                <span class="title" th:text="#{footer.contact.title}"></span>
                 <span th:text="#{footer.contact.text}"></span>
             </div>
             <div class="section">
-                <span class="title" th:text="#{footer.address.title}"></span><br>
+                <span class="title" th:text="#{footer.address.title}"></span>
                 <span th:text="#{footer.address.text}"></span>
             </div>
             <div class="section">
-                <span class="title" th:text="#{footer.product.title}"></span><br>
+                <span class="title" th:text="#{footer.product.title}"></span>
                 <span th:text="#{footer.product.text}"></span>
                 <div style="margin-top:10px;"></div>
                 <!-- <img th:src="@{~/img/icons/danishTransportIcon.svg}" alt="Danish Transport" class="icon">
