v.1.0.9 Fix User Verification Popup not being Localized

--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -60,6 +60,7 @@
         let localeProductExampleSubmitNewsletterEmptyEmail = "[[#{productTemplate.newsletter.email}]]";
         let localeProductExampleSubmitNewsletterSuccess = "[[#{productTemplate.newsletter.success}]]";
         let localeProductExampleSubmitNewsletterFailure = "[[#{productTemplate.newsletter.failure}]]";
+        let localeBasketGoToPaymentUserNotVerified = "[[#{login.user.not.verified}]]";
     </script>
     <!-- cookie prompt modal -->
     <div id="cookiePromptModalContainer">
