--- a/src/main/resources/static/styles/landingPage.css
+++ b/src/main/resources/static/styles/landingPage.css
@@ -34,10 +34,19 @@ span
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
     width: 100%;
     height: 6vh;
-    background-color: white;
+}
+
+.changeLanguageContainer
+{
+    margin-top: 22px !important;
+    padding-right: 25px !important;
+}
+
+#changeLanguage
+{
+    color: #AF6826 !important;
 }
 
 
@@ -208,7 +217,6 @@ span
 
 #footer-separator
 {
-    color: white;
     border-top: 1px solid white;
     width: 70vw;
 }
@@ -245,10 +253,12 @@ body, html
 #pageContainer
 {
     color: white;
-    background-image: url('../img/images/backgrounds/forestDarkImage.jpg');
+    background-image: url('../img/images/landingPage/landingpage_main_img.png');
+    background-size: 150vh;
     background-repeat: no-repeat;
     background-position: top center;
-    background-size: 120% 120%;
+    position: absolute;
+
 }
 
 #content
@@ -365,10 +375,16 @@ body, html
     text-shadow: none;
 }
 
+.info .section
+{
+    width: 32% !important;
+}
+
 #footerContainer
 {
     height: fit-content;
     margin-top: 1vh;
+    color: #AF6826;
 }
 
 /* Newsletter thing */
@@ -390,11 +406,11 @@ body, html
 
 #treecreateLogo
 {
-    width: 26vw;
+    width: 16vw;
+    margin-top: 11vh;
     height: auto;
     color: white;
-    -webkit-filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, .2));
-    filter: drop-shadow(3px 3px 10px rgba(0, 0, 0, .2));
+    filter: drop-shadow(0px 0px 50px rgba(0, 0, 0, 1));
 }
 
 #comingSoon
@@ -449,14 +465,12 @@ body, html
     width: 85px;
     border: none;
     color: #AF6826;
+    transition: 0.5s;
 }
 
 #emailSubmitBtn:hover
 {
-    height: 35px;
-    width: 75px;
-    margin: 1px 5px;
-    font-size: 15px;
+    transform: scale(0.9);
     box-shadow: 0 0 6px rgba(255, 255, 255, 0.2);
 }
 
@@ -472,14 +486,18 @@ body, html
     padding: 0.5vh;
     margin: 0.5vh;
     border-radius: 5px;
+    transition: 0.5s;
 }
 
 #changeLanguage:hover
 {
-    -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
+    transform: scale(1.2);
     cursor: default;
+}
+
+.contact-section
+{
+    margin-left: 20px;
 }
 
 /* * * * * * * * * * * * * * *
@@ -505,31 +523,45 @@ Scale dependent
 
 @media all and (min-width: 200px) and (max-width: 1024px)
 {
-
-    .scale-dependent-show
+    #changeLanguage
     {
-        display: block !important;
+        font-size: 36px;
     }
 
-    .scale-dependent-removal
+    #comingSoon
     {
-        display: none !important;
+        font-size: 70px;
     }
 
-    .mobile-review img
+    .icon-row-top img
     {
-        width: 200px;
-        height: 200px;
+        transform: scale(1.5);
+        margin: 1vh 2vh;
+        padding: 15px 10px 3px 10px;
+        filter: drop-shadow(1px 3px 3px rgba(0, 0, 0, .5));
     }
 
-    .mobile-review p
+    #subscribe
     {
-        margin: 15px 50px;
+        font-size: 32px;
+        line-height: 57px;
     }
 
-    .review
+    #emailContainer
     {
-        padding-bottom: 15px;
+        margin: 2vh;
+        transform: scale(1.5);
+    }
+
+    #pageContainer
+    {
+        background-size: 140vh;
+    }
+
+    #treecreateLogo
+    {
+        width: 34vw;
+        margin-top: 14vh;
     }
 
     #emailSubmitBtn
@@ -552,13 +584,70 @@ Scale dependent
         font-size: 15px;
         box-shadow: 0px 0px 6px rgba(255, 255, 255, 0.2);
     }
+}
 
-    @-moz-document url-prefix()
+@media all and (min-width: 200px) and (max-width: 1024px) and (orientation:landscape)
+{
+    #comingSoon
     {
-        #footerContainer
-        {
-            margin-top: 200px !important;
-        }
+        font-size: 70px;
+    }
+
+    .icon-row-top img
+    {
+        transform: scale(0.9);
+        margin: 0vh 0vh;
+        padding: 15px 10px 3px 10px;
+        filter: drop-shadow(1px 3px 3px rgba(0, 0, 0, .5));
+    }
+
+    #subscribe
+    {
+        font-size: 20px;
+        line-height: 30px;
+    }
+
+    #treecreateLogo
+    {
+        width: 13vw;
+        margin-top: 7vh !important;
+    }
+
+    .icon-row-top img
+    {
+        padding: 0px 10px 0px 10px;
+    }
+
+    #comingSoon
+    {
+        font-size: 42px;
+        line-height: 0px;
+    }
+
+    #footerContainer
+    {
+        margin-top: 0 !important;
+    }
+
+    #changeLanguage
+    {
+        font-size: 25px;
+    }
+
+    #footer, #footer-bottom
+    {
+        font-size: 15px;
+    }
+
+    #emailContainer
+    {
+        margin: 1vh;
+        transform: scale(0.9);
+    }
+
+    #pageContainer
+    {
+        background-size: 145vh !important;
     }
 }
 
